subheader with sort buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-add-event-modal></app-add-event-modal>
 <app-header></app-header>
+<app-subheader></app-subheader>
 <div class="wrapper">
   <app-feed></app-feed>
 </div>
