--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -3,10 +3,10 @@
 
 .header {
   display: flex;
-  height: 60px;
+  height: 56px;
   align-items: center;
   background: @color-primary-0;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
   &__title {
     margin-left: 250px;
