--- a/src/app/feed/item-transaction/item-transaction.component.less
+++ b/src/app/feed/item-transaction/item-transaction.component.less
@@ -46,6 +46,7 @@
     &__amount {
       margin-right: 0;
       margin-left: auto;
+      font-weight: bold;
     }
 
     &__currency-icon {
@@ -59,6 +60,9 @@
       font-size: 12px;
     }
 
+    &__desc {
+      font-weight: bold;
+    }
     // &--outcome {
     //   background: @color-secondary-2-1;
     // }
