--- a/src/app/_components/form/select/select.component.html
+++ b/src/app/_components/form/select/select.component.html
@@ -1,11 +1,11 @@
-<div class="form-select" (click)="isActive = !isActive" (clickOutside)="onClickedOutside($event)">
+<div class="form-select" (click)="isActive = !isActive" (clickOutside)="onClickedOutside()">
   <div class="form-select__input">
-    <div class="form-select__input-title">{{selectedOption.title}}</div>
+    <div class="form-select__input-title">{{ selectedOption.title }}</div>
     <app-icon [icon]="getSelectIcon(isActive)" class="form-select__input-icon"></app-icon>
   </div>
   <ul class="form-select__dropdown" *ngIf="isActive">
     <li *ngFor="let option of getFilteredOptions(options)" (click)="writeValue(option)">
-      <span>{{option.title}}</span>
+      <span>{{ option.title }}</span>
     </li>
   </ul>
 </div>
