button disabled state

--- a/src/app/_components/button/button.component.less
+++ b/src/app/_components/button/button.component.less
@@ -33,6 +33,10 @@
     color: @color-secondary-2-1;
   }
 
+  &--disabled {
+    background-color: transparent;
+  }
+
   &-icon {
     padding: @baseOffset;
     border: none;
