--- a/src/app/forms/add-transaction-form/add-transaction-form.component.html
+++ b/src/app/forms/add-transaction-form/add-transaction-form.component.html
@@ -1,4 +1,8 @@
-<form class="add-transaction-form" [formGroup]="addTransactionForm" (ngSubmit)="onSubmit(addTransactionForm.value)">
+<form
+  class="add-transaction-form"
+  [formGroup]="addTransactionForm"
+  (ngSubmit)="onSubmit(addTransactionForm.value)"
+>
   <app-form-group label="Тип транзакции">
     <app-select formControlName="trType" [options]="trTypeOptions"></app-select>
   </app-form-group>
