button appearance secodary & viewed label

--- a/src/app/_components/button/button.component.html
+++ b/src/app/_components/button/button.component.html
@@ -1,6 +1,7 @@
 <button
   class="app-button"
   [class.app-button-primary]="appearance === 'primary'"
+  [class.app-button-secondary-2]="appearance === 'secondary-2'"
   [class.app-button-flatten-primary]="appearance === 'flatten-primary'"
   [class.app-button-flatten-secondary-2]="appearance === 'flatten-secondary-2'"
   [class.app-button-icon]="appearance === 'icon'"
