--- a/src/app/_components/button/button.component.less
+++ b/src/app/_components/button/button.component.less
@@ -21,6 +21,12 @@
     color: @color-primary-1;
   }
 
+  &-secondary-2 {
+    border: 1px solid @color-secondary-2-1;
+    background-color: @color-secondary-2-0;
+    color: @color-secondary-2-1;
+  }
+
   &-flatten-primary {
     border: 1px solid @color-primary-1;
     background-color: transparent;
