--- a/src/app/feed/item-transaction/item-transaction.component.less
+++ b/src/app/feed/item-transaction/item-transaction.component.less
@@ -63,11 +63,8 @@
     &__desc {
       font-weight: bold;
     }
-    // &--outcome {
-    //   background: @color-secondary-2-1;
-    // }
 
-    &--outcome &__icon {
+    &--income &__icon {
       background: @color-secondary-2-0;
     }
   }
@@ -78,7 +75,7 @@
     background: @color-primary-0;
     color: @color-primary-1;
 
-    &--outcome {
+    &--income {
       background: @color-secondary-2-0;
       color: @color-secondary-2-1;
     }
@@ -96,7 +93,7 @@
     }
   }
 
-  &--outcome &-content {
+  &--income &-content {
     background: @color-secondary-2-0;
   }
 }
